--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+html {
+    scroll-behavior: smooth;
+    
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -8,11 +13,37 @@ body {
     animation: fadeIn 0.7s ease-in forwards;
 }
 
+.slide-in {
+    animation: slideIn 0.3s ease-out forwards;
+ }
+
+.slide-out {
+    animation: slideOut 0.3s ease-in backwards;
+}
+
 @keyframes fadeIn {
     from {
         opacity: 0;
     }
     to {
         opacity: 1;
+    }
+}
+
+@keyframes slideIn {
+    from {
+        transform: translateY(-100%);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideOut {
+    from {
+        transform: translateY(0);
+    }
+    to {
+        transform: translateY(-100%);
     }
 }
